feat: object age distribution & tenuring analysis (#117)
Add tenuring threshold analysis for GC tuning:

- AgeDistribution model with age histogram entries
- JdkGcAgeProvider: extract age data via jcmd GC.heap_info
- GcNewCommand --age-histogram: live age distribution with bars
- TenuringAnalyzer: parse age tables from debug GC logs
- GcLogCommand --tenuring: tenuring trend + recommendations

Signed-off-by: rlaope <piyrw9754@gmail.com>