@@ -2,20 +2,26 @@ package io.argus.cli.command;
 
 import io.argus.cli.config.CliConfig;
 import io.argus.cli.config.Messages;
+import io.argus.cli.model.AgeDistribution;
 import io.argus.cli.model.GcNewResult;
+import io.argus.cli.provider.GcAgeProvider;
 import io.argus.cli.provider.GcNewProvider;
 import io.argus.cli.provider.ProviderRegistry;
 import io.argus.cli.render.AnsiStyle;
 import io.argus.cli.render.RichRenderer;
 import io.argus.core.command.CommandGroup;
 
+import java.util.List;
+
 /**
  * Shows young generation GC detail: survivor spaces, tenuring threshold, eden.
+ * With --age-histogram shows per-age object distribution.
  */
 public final class GcNewCommand implements Command {
 
     private static final int WIDTH = RichRenderer.DEFAULT_WIDTH;
     private static final int BAR_WIDTH = 16;
+    private static final int AGE_BAR_WIDTH = 20;
 
     @Override
     public String name() { return "gcnew"; }
@@ -38,9 +44,11 @@ public final class GcNewCommand implements Command {
         String sourceOverride = null;
         boolean json = "json".equals(config.format());
         boolean useColor = config.color();
+        boolean ageHistogram = false;
         for (int i = 1; i < args.length; i++) {
             if (args[i].startsWith("--source=")) sourceOverride = args[i].substring(9);
             else if (args[i].equals("--format=json")) json = true;
+            else if (args[i].equals("--age-histogram")) ageHistogram = true;
         }
 
         String source = sourceOverride != null ? sourceOverride : config.defaultSource();
@@ -96,7 +104,142 @@ public final class GcNewCommand implements Command {
         String gcLine = "YGC: " + result.ygc() + "  (" + String.format("%.3fs", result.ygct()) + ")";
         System.out.println(RichRenderer.boxLine(gcLine, WIDTH));
 
+        // Age histogram
+        if (ageHistogram) {
+            System.out.println(RichRenderer.emptyLine(WIDTH));
+            System.out.println(RichRenderer.boxSeparator(WIDTH));
+            System.out.println(RichRenderer.boxLine(
+                    "  " + AnsiStyle.style(useColor, AnsiStyle.BOLD, AnsiStyle.CYAN)
+                            + messages.get("gcnew.age.title")
+                            + AnsiStyle.style(useColor, AnsiStyle.RESET), WIDTH));
+            System.out.println(RichRenderer.emptyLine(WIDTH));
+
+            GcAgeProvider ageProvider = registry.findGcAgeProvider(pid, sourceOverride);
+            if (ageProvider == null) {
+                System.out.println(RichRenderer.boxLine(
+                        "  " + messages.get("gcnew.age.unavailable"), WIDTH));
+            } else {
+                AgeDistribution dist = ageProvider.getAgeDistribution(pid);
+                renderAgeHistogram(dist, useColor);
+            }
+        }
+
         System.out.println(RichRenderer.boxFooter(useColor, null, WIDTH));
+    }
+
+    private void renderAgeHistogram(AgeDistribution dist, boolean useColor) {
+        List<AgeDistribution.AgeEntry> entries = dist.entries();
+
+        if (entries.isEmpty()) {
+            System.out.println(RichRenderer.boxLine(
+                    "  " + "No age data available. Run with -Xlog:gc+age=debug for live data.", WIDTH));
+            if (dist.tenuringThreshold() > 0) {
+                System.out.println(RichRenderer.boxLine(
+                        "  Tenuring: " + dist.tenuringThreshold()
+                                + " / max: " + dist.maxTenuringThreshold(), WIDTH));
+            }
+            return;
+        }
+
+        // Header
+        String bold = AnsiStyle.style(useColor, AnsiStyle.BOLD);
+        String reset = AnsiStyle.style(useColor, AnsiStyle.RESET);
+        System.out.println(RichRenderer.boxLine(
+                "  " + bold
+                        + RichRenderer.padRight("Age", 5)
+                        + RichRenderer.padLeft("Bytes", 12)
+                        + RichRenderer.padLeft("Cumulative", 13)
+                        + "   Bar"
+                        + reset, WIDTH));
+        System.out.println(RichRenderer.emptyLine(WIDTH));
+
+        long total = dist.survivorCapacity();
+        if (total == 0 && !entries.isEmpty()) total = entries.getLast().cumulativeBytes();
+
+        // Group ages >= 6 together
+        long ageGe6Bytes = 0;
+        long ageGe6Cumulative = 0;
+        boolean hasHighAges = false;
+
+        for (AgeDistribution.AgeEntry e : entries) {
+            if (e.age() >= 6) {
+                ageGe6Bytes += e.bytes();
+                ageGe6Cumulative = e.cumulativeBytes();
+                hasHighAges = true;
+            }
+        }
+
+        for (AgeDistribution.AgeEntry e : entries) {
+            if (e.age() >= 6) continue;
+            renderAgeLine(e.age(), String.valueOf(e.age()), e.bytes(), e.cumulativeBytes(),
+                    total, useColor, dist.tenuringThreshold());
+        }
+
+        if (hasHighAges) {
+            renderAgeLine(-1, "6+", ageGe6Bytes, ageGe6Cumulative, total, useColor, dist.tenuringThreshold());
+        }
+
+        System.out.println(RichRenderer.emptyLine(WIDTH));
+
+        // Summary lines
+        long survivorCap = dist.survivorCapacity();
+        long desiredSize = dist.desiredSurvivorSize();
+        int survivorPct = survivorCap > 0 && desiredSize > 0
+                ? (int) Math.min(100, total * 100 / desiredSize) : 0;
+
+        System.out.println(RichRenderer.boxLine(
+                "  Tenuring: " + dist.tenuringThreshold() + " / max: " + dist.maxTenuringThreshold(), WIDTH));
+        if (desiredSize > 0) {
+            System.out.println(RichRenderer.boxLine(
+                    "  Survivor: " + survivorPct + "% ("
+                            + RichRenderer.formatKB(total / 1024)
+                            + " / " + RichRenderer.formatKB(desiredSize / 1024) + ")", WIDTH));
+        }
+
+        // Insights
+        System.out.println(RichRenderer.emptyLine(WIDTH));
+        if (!entries.isEmpty() && total > 0) {
+            long age1Bytes = entries.getFirst().age() == 1 ? entries.getFirst().bytes() : 0;
+            int age1Pct = (int) (age1Bytes * 100 / total);
+            if (age1Pct >= 50) {
+                System.out.println(RichRenderer.boxLine(
+                        "  \u2192 " + age1Pct + "% die at age 1 (healthy)", WIDTH));
+            }
+        }
+
+        // MaxTenuringThreshold suggestion
+        if (dist.tenuringThreshold() > 4 && !entries.isEmpty()) {
+            // Find age at which 80% is accumulated
+            long threshold80 = (long) (total * 0.80);
+            for (AgeDistribution.AgeEntry e : entries) {
+                if (e.cumulativeBytes() >= threshold80) {
+                    if (e.age() < dist.maxTenuringThreshold()) {
+                        System.out.println(RichRenderer.boxLine(
+                                "  \u2192 Consider -XX:MaxTenuringThreshold=" + e.age(), WIDTH));
+                    }
+                    break;
+                }
+            }
+        }
+    }
+
+    private void renderAgeLine(int age, String label, long bytes, long cumulative,
+                               long total, boolean useColor, int tenuringThreshold) {
+        int pct = total > 0 ? (int) (bytes * 100 / total) : 0;
+        int barLen = AGE_BAR_WIDTH * pct / 100;
+        String bar = "\u2588".repeat(Math.max(0, barLen));
+
+        boolean atThreshold = age == tenuringThreshold;
+        String color = atThreshold ? AnsiStyle.style(useColor, AnsiStyle.YELLOW) : "";
+        String reset = atThreshold ? AnsiStyle.style(useColor, AnsiStyle.RESET) : "";
+
+        String line = color
+                + RichRenderer.padLeft(label, 3) + "   "
+                + RichRenderer.padLeft(RichRenderer.formatKB(bytes / 1024), 10) + "   "
+                + RichRenderer.padLeft(RichRenderer.formatKB(cumulative / 1024), 10) + "   "
+                + RichRenderer.padRight(bar, AGE_BAR_WIDTH) + "  " + pct + "%"
+                + reset;
+        System.out.println(RichRenderer.boxLine("  " + line, WIDTH));
     }
 
     private static void printJson(GcNewResult r) {
